# statistics-lab

./: .gitignore  LICENSE  README.md  pyproject.toml
.streamlit/: config.toml
bquant/: bquant_export.py
class_1/: analysis.ipynb
data/: universe.csv
docs/: project_roadmap.typ
docs/methodology/: screening_criteria_v1.typ
docs/report/: build_midterm_deck.py  final_report.typ  midterm_presentation_en.pptx  midterm_presentation_en.typ  midterm_presentation_pt.pptx  midterm_presentation_pt.typ  midterm_progress_en.typ  midterm_progress_pt.typ  technical_report_en.typ  technical_report_pt.typ
docs/superpowers/plans/: 2026-07-15-issuer-opportunity-screener.md
docs/superpowers/specs/: 2026-07-15-issuer-opportunity-screener-design.md
docs/universe/: candidate_names.typ  team_validation_universe.typ  universe_governance.typ
docs/week-notes/: week_01.typ  week_02.typ  week_03.typ
src/issuer_opportunity_screener/: app.py  insights.py  log.py  pipeline.py  reports.py  scoring.py  snapshots.py  universe.py  universe_admin.py  validation.py
src/issuer_opportunity_screener/sources/: base.py  bloomberg.py  bquant_export.py  fixture.py  hermes.py
tests/: test_analytics.py  test_app.py  test_bloomberg_mapping.py  test_bloomberg_resilience.py  test_bquant_export.py  test_edge_cases.py  test_end_to_end.py  test_fixture_source.py  test_hermes.py  test_insights.py  test_log.py  test_pipeline.py  test_reports.py  test_scoring_composite.py  test_scoring_signals.py  test_snapshots.py  test_sources_base.py  test_universe.py  test_universe_admin.py
